@@ -1,5 +1,5 @@
 .\" DO NOT MODIFY THIS FILE!  It was generated by help2man 1.28.
-.TH LIGHTNINGIZE "1" "November 2004" "lightningize 1.2a" "User Commands"
+.TH LIGHTNINGIZE "1" "July 2006" "lightningize 1.2a" "User Commands"
 .SH NAME
 lightningize \- manual page for lightningize 1.2a
 .SH SYNOPSIS
