@@ -1,3 +1,11 @@
+2006-07-06  Paolo Bonzini  <bonzini@gnu.org>
+	    Ludovic Courtes  <ludovic.courtes@laas.fr>
+
+	* lightning/ppc/core.h (_jit_mod): Replace with...
+	(_jit_mod_big, _jit_mod_small): ... these.
+	(jit_modi_i, jit_modi_ui): Rewrite.
+	* tests/modi.c, tests/modi.ok: New tests.
+
 2006-05-18  Matthew Flatt  <mflatt@cs.utah.edu>
 
 	* lightning/i386/asm.h: Fix test for extending the mprotect area
